fix overlapping problem

--- a/css/main.css
+++ b/css/main.css
@@ -268,10 +268,6 @@ nav .fa{
 /* CSS for positioning the overlay image */
 
 
-
-
-
-
 .footer {
   padding: 0px 25px;
   /* put everything in one line */
@@ -320,6 +316,14 @@ nav .fa{
 /* add bottom margin */
 .footer{
   margin-bottom: 25px; 
+}
+
+
+/* delet decoration */
+.fa-facebook, .fa-twitter, .fa-instagram{
+text-decoration: none;
+color: black;
+
 }
 
 
@@ -581,8 +585,8 @@ padding-top: 30px;
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   display: flex;
   justify-content: center;
   /* verticall-center */
